services/4-prometheus/ing-prometheus.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.rule.type: PathPrefix
  generation: 1
  name: prometheus-service
  namespace: monitoring
spec:
  rules:
  - host: prometheus.apps.dev.itshellws-k8s.com
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 8080
        path: /
