services/4-prometheus/ing-traefik-prometheus.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.rule.type: PathPrefix
  generation: 1
  name: traefik-prometheus
  namespace: kube-system
spec:
  rules:
  - host: traefik-prometheus.apps.dev.itshellws-k8s.com
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
        path: /
